--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
 
 body {
     width: 100%;
+    height: 100%;
     background-image: url("images/こっちにおいでよ.jpg");
     background-attachment: fixed;
     background-position: center;
