--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* For mobile phones: */
 
 html {
+    position: absolute;
     cursor: crosshair;
 }
 
@@ -13,7 +14,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Roboto Condensed', sans-serif;
-    color: black; 
+    color: black;
 }
 
 img:hover { opacity: 0.7; }
@@ -63,7 +64,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container-center {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     margin-right: -50%;
