--- a/style.css
+++ b/style.css
@@ -18,17 +18,18 @@ body {
     color: black;
 }
 
-img:hover { opacity: 0.7; }
-a:link { text-decoration: none; }
-a:visited {  }
-a:hover { font-style: italic; /*text-decoration: line-through;*/ color: #B5A1C9; }
-.credit:hover { color: black; }
-.container-link-col:hover { background-color: white; color: black; }
-
 img {
     opacity: 1;
     transition: .5s ease;
     backface-visibility: hidden;
+}
+
+img:hover {
+    opacity: 0.7;
+}
+
+h1 {
+    margin-top: 0px;
 }
 
 p {
@@ -40,6 +41,19 @@ a {
     color: #DFC5FA;
     cursor: help;
 }
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+}
+
+a:hover {
+    font-style: italic;
+    color: #B5A1C9;
+}
+
 
 hr {
     color: #EEE3FA;
@@ -76,14 +90,31 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 10px;
 }
 
-.container-info {
-    transition: .5s ease;
-    width: 40vw;
-    height: 322px;
+.section-info {
     background-color: white;
-    padding-left: 10px;
-    padding-right: 10px;
-    overflow-y: scroll;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+div.top {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    padding: 3px;
+    background-color: #DFC5FA;
+    color: white;
+    opacity: 0.7;
+    text-align: center;
+    font-size: 12px;
+    cursor: default;
+    transition: .3s ease;
+}
+
+div.top:hover {
+    padding-right: 0px;
+    font-style: normal;
+    letter-spacing: 5px;
+    opacity: 1;
 }
 
 .container-about {
@@ -91,7 +122,6 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 14px;
     text-transform: lowercase;
     text-align: center;
-    /*letter-spacing: 10px;*/
     background-color: white;
     color: black;
     margin-top: 7px;
@@ -103,9 +133,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .container-desc {
     transition: .5s ease;
-    /*margin-top: 10px;*/
-    max-width: 150px;
-    max-height: 100px;
+    width: 150px;
+    height: 100px;
     background-color: white;
     padding-left: 5px;
     padding-right: 5px;
@@ -119,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container-link-col {
-    transition: .5s ease;
+    transition: .3s ease;
     margin-bottom: 3px;
     width: 17%;
     background-color: black;
@@ -128,7 +157,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 10px;
     text-transform: uppercase;
     text-align: center;
-    /*letter-spacing: 3px;*/
+}
+
+.container-link-col:hover {
+    background-color: white;
+    color: black;
 }
 
 .img-info {
@@ -148,21 +181,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .col-info {
+    transition: .5s ease;
+    width: 40vw;
+    height: 300px;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 
 .title {
     transition: .5s ease;
     font-size: 18px;
-    /*font-family: ;
-    font-style: italic;
-    letter-spacing: 2px;
-    text-transform: lowercase;*/
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 150px;
+    width: 150px;
     background: white;
-    /*padding: 5px;*/
 }
 
 .dp {
@@ -190,9 +223,13 @@ h1, h2, h3, h4, h5, h6 {
     color: black;
     font-size: 12px;
     position: fixed;
-    bottom: 0;
+    left: 2px;
+    bottom: 2px;
 }
 
+.credit:hover {
+    color: black;
+}
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
@@ -208,7 +245,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .title {
-        max-width: 150px;
+        width: 150px;
         font-size: 20px;
     }
 
@@ -218,7 +255,7 @@ h1, h2, h3, h4, h5, h6 {
         border-radius: 70px;
     }
 
-    .container-info {
+    .col-info {
         height: 350px;
     }
 
@@ -227,7 +264,8 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .container-desc {
-        max-width: 150px;
+        width: 150px;
+        height: 120px;
     }
 
     .container-link-col {
@@ -244,7 +282,7 @@ h1, h2, h3, h4, h5, h6 {
     /* For desktop: */
 
     .title {
-        max-width: 200px;
+        width: 200px;
         font-size: 24px;
     }
 
@@ -254,7 +292,7 @@ h1, h2, h3, h4, h5, h6 {
         border-radius: 85px;
     }
 
-    .container-info {
+    .col-info {
         height: 421px;
     }
 
@@ -263,7 +301,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .container-desc {
-        max-width: 200px;
+        width: 200px;
     }
 
     .container-link-row {
